# latincy-readers

./: .gitignore  CHANGELOG.md  LICENSE  PLAN.md  README.md  pyproject.toml
cli/: cache_tesserae.py  demo_disk_vs_nlp.py  demo_vector_search.py  vector_search.py
notebooks/: combined-reader-demo.ipynb  homer-word-counting.ipynb  latinlibrary-demo.ipynb  tesserae-demo.ipynb  tesserae-greek-demo.ipynb  ud-demo.ipynb  vector-search-demo.ipynb  wikisource-demo.ipynb
src/latincyreaders/: __init__.py
src/latincyreaders/cache/: __init__.py  canonical.py  conlluc.py  corrections.py  disk.py  vectors.py
src/latincyreaders/core/: __init__.py  base.py  combined.py
src/latincyreaders/editor/: __init__.py  app.py  corrections.py  validation.py
src/latincyreaders/nlp/: __init__.py  backends.py  pipeline.py
src/latincyreaders/readers/: __init__.py  camena.py  digilibt.py  greek_tesserae.py  plaintext.py  tei.py  tesserae.py  txtdown.py  ud.py  wikisource.py
src/latincyreaders/utils/: agldt.py
tests/: conftest.py  test_agldt_converter.py  test_agldt_experiment.py  test_backends.py  test_canonical.py  test_combined_reader.py  test_conlluc.py  test_conlluc_sibling.py  test_corrections.py  test_digilibt.py  test_disk_cache.py  test_editor.py  test_greek_tesserae.py  test_pipeline.py  test_reader_vectors.py  test_readthrough.py  test_txtdown.py  test_ud.py  test_vectors.py  test_wikisource.py
tests/fixtures/digilibt/: nested_with_verse.xml  prose_caps.xml  prose_flat.xml  section_with_heads.xml
tests/fixtures/greek_tesserae/: homer_iliad.tess
tests/fixtures/txtdown/: blockquote.txtd
tests/fixtures/ud/: sample.conllu
(+3 files in other folders)
