[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "latincy-readers"
version = "1.2.0"
description = "Corpus readers for Latin texts with LatinCy/spaCy integration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Patrick J. Burns", email = "patrick@diyclassics.org" }
]
keywords = ["latin", "ancient-greek", "nlp", "corpus", "spacy", "classical-languages", "latincy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "spacy>=3.7",
    "lxml>=5.0",
    "natsort>=8.0",
    "textacy>=0.13",
    "conllu>=4.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]
[project.urls]
Homepage = "https://github.com/diyclassics/latincy-readers"
Repository = "https://github.com/diyclassics/latincy-readers"

[tool.hatch.build.targets.wheel]
packages = ["src/latincyreaders"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
